--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ atty = "0.2.14"
 serde_json = "1.0.140"
 serde = { version = "1.0.219", features = ["derive"] }
 chrono = { version = "0.4.41", features = ["serde"] }
+dirs = "6.0.0"
