--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,19 @@
 [package]
 name = "vapor-cli"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
-rusqlite = { version = "0.31.0", features = ["bundled"] }
-clap = { version = "4.5.4", features = ["derive"] }
-prettytable-rs = "0.10.0"
-anyhow = "1.0.82"
-rustyline = "14.0.0"
-csv = "1.3.0"
-atty = "0.2.14"
-serde_json = "1.0.140"
-serde = { version = "1.0.219", features = ["derive"] }
-chrono = { version = "0.4.41", features = ["serde"] }
-dirs = "6.0.0"
+anyhow = "1.0"
+clap = { version = "4.4", features = ["derive"] }
+prettytable-rs = "0.10"
+rusqlite = { version = "0.29", features = ["bundled"] }
+csv = "1.3"
+atty = "0.2"
+rustyline = "12.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+rand = "0.8"
+uuid = { version = "1.6", features = ["v4"] }
+chrono = "0.4"
+dirs = "5.0"
