--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "vapor-cli"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
+description = "A command-line interface for SQLite database management with enhanced features for data manipulation, querying, and testing"
+license = "MIT"
+repository = "https://github.com/yourusername/vapor-cli"
+readme = "README.md"
+keywords = ["sqlite", "database", "cli", "repl", "sql"]
+categories = ["command-line-utilities", "database", "development-tools"]
+authors = ["Your Name <your.email@example.com>"]
 
 [dependencies]
 anyhow = "1.0"
@@ -17,3 +24,6 @@ rand = "0.8"
 uuid = { version = "1.6", features = ["v4"] }
 chrono = "0.4"
 dirs = "5.0"
+
+[dev-dependencies]
+tempfile = "3.8"
