Update repository URL in Cargo.toml to reflect new ownership

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 edition = "2021"
 description = "A command-line interface for SQLite database management with enhanced features for data manipulation, querying, and testing"
 license = "MIT"
-repository = "https://github.com/yourusername/vapor-cli"
+repository = "https://github.com/ooyeku/vapor-cli"
 readme = "README.md"
 keywords = ["sqlite", "database", "cli", "repl", "sql"]
 categories = ["command-line-utilities", "database", "development-tools"]
