--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ rand = "0.8"
 uuid = { version = "1.6", features = ["v4"] }
 chrono = "0.4"
 dirs = "5.0"
+ctrlc = "3.4"
 
 [dev-dependencies]
 tempfile = "3.8"
